Réalisation préliminaire du formulaire de la page d'accueil

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -1,5 +1,7 @@
 
-
+@import "./utils/utils.scss";
 @import "./base/base_styles.scss";
 @import "./layouts/header_styles.scss";
 @import "./layouts/footer_styles.scss";
+@import "./pages/accueil.scss";
+@import "./components/components.scss"
