--- a/styles/sass/base/base_styles.scss
+++ b/styles/sass/base/base_styles.scss
@@ -1,4 +1,3 @@
-@import "../utils/utils.scss";
 
 * {
     padding: 0;
@@ -11,6 +10,9 @@
     color: black;
     font-size: 14px;
     font-family: "roboto";
+    font-weight: 400;
+    background: none;
+    border: none;
 }
 
 body {
