--- a/styles/sass/utils/utils.scss
+++ b/styles/sass/utils/utils.scss
@@ -14,3 +14,8 @@ $text-white: #F6F6F6;
     justify-content: center;
     align-items: center;
 }
+@mixin display-flex-column-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
