--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -13,6 +9,9 @@
   color: black;
   font-size: 14px;
   font-family: "roboto";
+  font-weight: 400;
+  background: none;
+  border: none;
 }
 
 body {
@@ -51,6 +50,49 @@ footer li {
 footer i {
   width: 20px;
   font-size: 12px;
+}
+
+form {
+  background-color: #F6F6F6;
+  text-align: center;
+  padding-bottom: 35px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+form input {
+  height: 50px;
+  width: 100%;
+  margin-bottom: 35px;
+  background-color: #EAEAEA;
+  box-shadow: inset 0 3px 3px #99E2D0;
+  text-align: center;
+  font-weight: 700;
+}
+form p {
+  width: 90%;
+  padding-bottom: 21px;
+  font-weight: 400;
+  font-size: 18px;
+  color: #353535;
+}
+
+h1 {
+  width: 70%;
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 14px;
+}
+
+button {
+  padding: 16px;
+  margin-bottom: 28px;
+  background: linear-gradient(#FF79DA, #9356DC);
+  border-radius: 50px;
+  box-shadow: 3px 3px 6px #99E2D0;
+  font-size: 16px;
+  font-weight: 700;
+  color: #F6F6F6;
 }
 
 /*# sourceMappingURL=style.css.map */
