--- a/styles/sass/pages/accueil.scss
+++ b/styles/sass/pages/accueil.scss
@@ -15,6 +15,12 @@ form {
         text-align: center;
         font-weight: 700;
     }
+    h1 {
+        width: 70%;
+        font-size: 24px;
+        font-weight: 700;
+        margin-bottom: 14px;
+    }
     p {
         width: 90%;
         padding-bottom: 21px;
@@ -24,9 +30,56 @@ form {
     }
 }
 
-h1 {
-    width: 70%;
-    font-size: 24px;
-    font-weight: 700;
+#fonctionnement {
+    width: 100%;
+    padding: 5%;
+    h2 {
+        margin-bottom: 21px;
+        font-size: 21px;
+        font-weight: 700;
+    }
+
+}
+
+.steps {
+    position: relative;
+    height: 74px;
+    width: 100%;
+
     margin-bottom: 14px;
+
+    border-radius: 16px;
+    background-color: #F6F6F6;
+    box-shadow: 3px 3px 6px $tertiaire-grey;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:hover {
+        background-color: #F5EEFC;
+        i {
+            color: $primaire-blue;
+        }
+    }
+
+    .steps_number {
+        position: absolute;
+        left: -10px;
+
+        padding: 2px 7px;
+        border-radius: 21px;
+
+        color: $text-white;
+        background-color: $primaire-blue;
+    }
+    i {
+        position: absolute;
+        left: 28px;
+        font-size: 16px;
+        color: #777777;
+    }
+    .steps_definition {
+        font-weight: 700;
+    }
+
 }
