--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
   text-decoration: none;
   list-style-type: none;
   color: black;
-  font-size: 14px;
+  font-size: 16px;
   font-family: "roboto";
   font-weight: 400;
   background: none;
@@ -69,6 +69,12 @@ form input {
   text-align: center;
   font-weight: 700;
 }
+form h1 {
+  width: 70%;
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 14px;
+}
 form p {
   width: 90%;
   padding-bottom: 21px;
@@ -77,14 +83,53 @@ form p {
   color: #353535;
 }
 
-h1 {
-  width: 70%;
-  font-size: 24px;
+#fonctionnement {
+  width: 100%;
+  padding: 5%;
+}
+#fonctionnement h2 {
+  margin-bottom: 21px;
+  font-size: 21px;
   font-weight: 700;
-  margin-bottom: 14px;
 }
 
-button {
+.steps {
+  position: relative;
+  height: 74px;
+  width: 100%;
+  margin-bottom: 14px;
+  border-radius: 16px;
+  background-color: #F6F6F6;
+  box-shadow: 3px 3px 6px #99E2D0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.steps:hover {
+  background-color: #F5EEFC;
+}
+.steps:hover i {
+  color: #9356DC;
+}
+.steps .steps_number {
+  position: absolute;
+  left: -10px;
+  padding: 2px 7px;
+  border-radius: 21px;
+  color: #F6F6F6;
+  background-color: #9356DC;
+}
+.steps i {
+  position: absolute;
+  left: 28px;
+  font-size: 16px;
+  color: #777777;
+}
+.steps .steps_definition {
+  font-weight: 700;
+}
+
+.submit-button {
   padding: 16px;
   margin-bottom: 28px;
   background: linear-gradient(#FF79DA, #9356DC);
