Réalisation préliminaire de la partie restaurant de la page d'accueil

--- a/styles/sass/pages/accueil.scss
+++ b/styles/sass/pages/accueil.scss
@@ -1,17 +1,16 @@
+// Formulaire de recherche 
 form {
-    background-color: #F6F6F6;
+    background-color: $background-grey-lighter;
     text-align: center;
     padding-bottom: 35px;
     @include display-flex-column-center;
     input {
         height: 50px;
         width: 100%;
-
         margin-bottom: 35px;
 
         background-color: #EAEAEA;
         box-shadow: inset 0 3px 3px $tertiaire-grey;
-
         text-align: center;
         font-weight: 700;
     }
@@ -30,6 +29,7 @@ form {
     }
 }
 
+// Section Fonctionnement
 #fonctionnement {
     width: 100%;
     padding: 5%;
@@ -38,9 +38,7 @@ form {
         font-size: 21px;
         font-weight: 700;
     }
-
 }
-
 .steps {
     position: relative;
     height: 74px;
@@ -49,7 +47,7 @@ form {
     margin-bottom: 14px;
 
     border-radius: 16px;
-    background-color: #F6F6F6;
+    background-color: $background-grey-lighter;
     box-shadow: 3px 3px 6px $tertiaire-grey;
 
     display: flex;
@@ -61,7 +59,6 @@ form {
             color: $primaire-blue;
         }
     }
-
     .steps_number {
         position: absolute;
         left: -10px;
@@ -81,5 +78,79 @@ form {
     .steps_definition {
         font-weight: 700;
     }
+}
 
+// Partie Restaurants
+#restaurants {
+    width: 100%;
+    padding: 5%;
+    background-color: $background-grey-lighter;
+    h2 {
+        margin-bottom: 21px;
+        font-size: 21px;
+        font-weight: 700;
+    }
+
+}
+
+.restaurants_card {
+    height: 250px;
+    width: 100%;
+    display: block;
+    margin-bottom: 21px;
+    border-radius: 16px;
+    box-shadow: 3px 3px 6px $tertiaire-grey;
+    overflow: hidden;
+    &_img {
+        position: relative;
+        height: 175px;
+        width: 100%;
+        overflow: hidden;
+        img {
+            height: 175px;
+            width: 100%;
+            object-fit: cover;
+        }
+    }
+    &_description {
+        height: 75px;
+        width: 100%;
+        padding: 16px;
+        display: flex;
+        justify-content: space-between;
+        &_name {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            h3 {
+                font-weight: 700;
+            }
+        }
+        &_like {
+            position: relative;
+            height: 100%;
+            width: 48px;
+            @include display-flex-center-center;
+            i {
+                font-size: 20px;
+            }
+        }
+    }
+}
+.hover-heart {
+    position: absolute;
+    color: $primaire-blue;
+    opacity: 0;
+    &:hover {
+        animation: hover-like 0.5s ease-in-out forwards;
+    }
+}
+@keyframes hover-like {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 100%;
+    }
 }
