--- a/styles/sass/utils/utils.scss
+++ b/styles/sass/utils/utils.scss
@@ -3,6 +3,7 @@ $primaire-blue: #9356DC;
 $secondaire-blue-lighter: #FF79DA;
 $tertiaire-grey: #99E2D0;
 $text-white: #F6F6F6;
+$background-grey-lighter: #F6F6F6;
 
 // POLICES
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
