--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -1,5 +1,6 @@
 
 @import "./utils/utils.scss";
+@import "./utils/animation.scss";
 @import "./base/base_styles.scss";
 @import "./layouts/header_styles.scss";
 @import "./layouts/footer_styles.scss";
