--- a/styles/sass/utils/utils.scss
+++ b/styles/sass/utils/utils.scss
@@ -2,6 +2,7 @@
 $primaire-blue: #9356DC;
 $secondaire-blue-lighter: #FF79DA;
 $tertiaire-grey: #99E2D0;
+$quaternaire-grey-darker: #6F6F6F;
 $text-white: #F6F6F6;
 $background-grey-lighter: #F6F6F6;
 
