--- a/styles/sass/layouts/footer_styles.scss
+++ b/styles/sass/layouts/footer_styles.scss
@@ -2,7 +2,7 @@
 footer {
     height: 200px;
     width: 100%;
-    padding: 28px;
+    padding: 16px 28px;
     background-color: #353535;
 
     * {
@@ -11,7 +11,7 @@ footer {
     h3 {
         font-family: "Shrikhand";
         font-size: 17px;
-        margin-bottom: 21px;
+        margin-bottom: 16px;
     }
     li {
         line-height: 24px;
