--- a/styles/sass/pages/accueil.scss
+++ b/styles/sass/pages/accueil.scss
@@ -13,6 +13,7 @@ form {
         box-shadow: inset 0 3px 3px $tertiaire-grey;
         text-align: center;
         font-weight: 700;
+        font-family: Arial, 'Font Awesome 5 Free';
     }
     h1 {
         width: 70%;
@@ -25,14 +26,14 @@ form {
         padding-bottom: 21px;
         font-weight: 400;
         font-size: 18px;
-        color: #353535;
+        color: $quaternaire-grey-darker;
     }
 }
 
 // Section Fonctionnement
 #fonctionnement {
     width: 100%;
-    padding: 5%;
+    padding: 48px 24px;
     h2 {
         margin-bottom: 21px;
         font-size: 21px;
@@ -43,16 +44,11 @@ form {
     position: relative;
     height: 74px;
     width: 100%;
-
-    margin-bottom: 14px;
-
+    @include display-flex-center-center;
     border-radius: 16px;
+    box-shadow: 3px 3px 18px $tertiaire-grey;
     background-color: $background-grey-lighter;
-    box-shadow: 3px 3px 6px $tertiaire-grey;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin-bottom: 24px;
     &:hover {
         background-color: #F5EEFC;
         i {
@@ -62,18 +58,16 @@ form {
     .steps_number {
         position: absolute;
         left: -10px;
-
         padding: 2px 7px;
         border-radius: 21px;
-
-        color: $text-white;
         background-color: $primaire-blue;
+        color: $text-white;
     }
     i {
         position: absolute;
         left: 28px;
         font-size: 16px;
-        color: #777777;
+        color: $quaternaire-grey-darker;
     }
     .steps_definition {
         font-weight: 700;
@@ -83,33 +77,37 @@ form {
 // Partie Restaurants
 #restaurants {
     width: 100%;
-    padding: 5%;
+    padding: 48px 24px;
     background-color: $background-grey-lighter;
     h2 {
         margin-bottom: 21px;
         font-size: 21px;
         font-weight: 700;
     }
-
 }
 
 .restaurants_card {
     height: 250px;
     width: 100%;
     display: block;
-    margin-bottom: 21px;
     border-radius: 16px;
-    box-shadow: 3px 3px 6px $tertiaire-grey;
+    background-color: white;
+    box-shadow: 3px 3px 18px $tertiaire-grey;
+    margin-bottom: 21px;
     overflow: hidden;
     &_img {
         position: relative;
         height: 175px;
         width: 100%;
+
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+
         overflow: hidden;
         img {
-            height: 175px;
-            width: 100%;
-            object-fit: cover;
+            width: 105%;
+            // object-fit: cover;
         }
     }
     &_description {
@@ -124,6 +122,8 @@ form {
             flex-direction: column;
             justify-content: center;
             h3 {
+                font-size: 18px;
+                line-height: 29px;
                 font-weight: 700;
             }
         }
@@ -133,24 +133,24 @@ form {
             width: 48px;
             @include display-flex-center-center;
             i {
-                font-size: 20px;
+                font-size: 24px;
             }
         }
     }
+}
+.restaurants_card:nth-of-type(2) .restaurants_card_img {
+    align-items: center;
 }
 .hover-heart {
     position: absolute;
     color: $primaire-blue;
     opacity: 0;
+    display: block;
+    background: 
+    -webkit-linear-gradient($primaire-blue, $secondaire-blue-lighter);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     &:hover {
         animation: hover-like 0.5s ease-in-out forwards;
-    }
-}
-@keyframes hover-like {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 100%;
     }
 }
