Initialisation des 4 pages de restaurant. header et footer intégré. lien aller et retour entre page d'accueil et des restaurant.

--- a/styles/style.css
+++ b/styles/style.css
@@ -31,11 +31,20 @@ body {
 }
 
 header {
+  position: relative;
   height: 62px;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+header a {
+  position: absolute;
+  left: 24px;
+  font-size: 21px;
+}
+header a i {
+  font-size: 24px;
 }
 header img {
   width: 164px;
