--- a/styles/sass/layouts/header_styles.scss
+++ b/styles/sass/layouts/header_styles.scss
@@ -1,10 +1,17 @@
 
 header {
+    position: relative;
     height: 62px;
     width: 100%;
-
     @include display-flex-center-center;
-
+    a {
+        position: absolute;
+        left: 24px;
+        font-size: 21px;
+        i {
+            font-size: 24px;
+        }
+    }
     img {
         width: 164px;
     }
