partie en-tête des page restaurants réalisé

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -5,4 +5,5 @@
 @import "./layouts/header_styles.scss";
 @import "./layouts/footer_styles.scss";
 @import "./pages/accueil.scss";
-@import "./components/components.scss"
+@import "./pages/restaurants.scss";
+@import "./components/components.scss";
