--- a/styles/sass/components/components.scss
+++ b/styles/sass/components/components.scss
@@ -31,3 +31,26 @@
         color: $quaternaire-grey-darker;
     }
 }
+
+.like {
+    position: relative;
+    // height: 100%;
+    width: 48px;
+    @include display-flex-center-center;
+    i {
+        font-size: 24px;
+    }
+    .hover-heart {
+        position: absolute;
+        color: $primaire-blue;
+        opacity: 0;
+        display: block;
+        background: 
+        -webkit-linear-gradient($primaire-blue, $secondaire-blue-lighter);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        &:hover {
+            animation: hover-like 0.5s ease-in-out forwards;
+        }
+    }
+}
