--- a/styles/style.css
+++ b/styles/style.css
@@ -201,33 +201,52 @@ form p {
   line-height: 29px;
   font-weight: 700;
 }
-.restaurants_card_description_like {
-  position: relative;
-  height: 100%;
-  width: 48px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.restaurants_card_description_like i {
-  font-size: 24px;
-}
 
 .restaurants_card:nth-of-type(2) .restaurants_card_img {
   align-items: center;
 }
 
-.hover-heart {
-  position: absolute;
-  color: #9356DC;
-  opacity: 0;
-  display: block;
-  background: -webkit-linear-gradient(#9356DC, #FF79DA);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+#restaurant-header {
+  position: relative;
+  height: 300px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
 }
-.hover-heart:hover {
-  animation: hover-like 0.5s ease-in-out forwards;
+#restaurant-header img {
+  width: 110%;
+  align-self: center;
+}
+
+#restaurant-header, .la-note-enchantee-image {
+  justify-content: center;
+}
+#restaurant-header img, .la-note-enchantee-image img {
+  width: 100%;
+}
+
+#nom-du-restaurant {
+  position: absolute;
+  bottom: 0px;
+  min-height: 72px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding-left: 18px;
+  border-top-left-radius: 32px;
+  border-top-right-radius: 32px;
+  background-color: #F6F6F6;
+}
+#nom-du-restaurant h1 {
+  font-size: 26px;
+  font-family: "Shrikhand", Georgia, serif;
+}
+#nom-du-restaurant .like {
+  bottom: 10px;
+  margin-right: 28px;
 }
 
 .submit-button {
@@ -257,6 +276,29 @@ form p {
   font-size: 14px;
   font-weight: 700;
   color: #6F6F6F;
+}
+
+.like {
+  position: relative;
+  width: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.like i {
+  font-size: 24px;
+}
+.like .hover-heart {
+  position: absolute;
+  color: #9356DC;
+  opacity: 0;
+  display: block;
+  background: -webkit-linear-gradient(#9356DC, #FF79DA);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.like .hover-heart:hover {
+  animation: hover-like 0.5s ease-in-out forwards;
 }
 
 /*# sourceMappingURL=style.css.map */
