--- a/styles/sass/utils/utils.scss
+++ b/styles/sass/utils/utils.scss
@@ -6,6 +6,8 @@ $quaternaire-grey-darker: #6F6F6F;
 $text-white: #F6F6F6;
 $background-grey-lighter: #F6F6F6;
 
+$dimension-check-plat: 60px;
+
 // POLICES
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
