--- a/styles/style.css
+++ b/styles/style.css
@@ -220,7 +220,7 @@ form p {
 
 #restaurant-header {
   position: relative;
-  max-height: 300px;
+  height: 300px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -232,11 +232,11 @@ form p {
   align-self: center;
 }
 
-#restaurant-header, .la-note-enchantee-image {
+.la-note-enchantee {
   justify-content: center;
 }
-#restaurant-header img, .la-note-enchantee-image img {
-  width: 100%;
+.la-note-enchantee_image {
+  width: 100% !important;
 }
 
 #nom-du-restaurant {
@@ -263,13 +263,13 @@ form p {
 
 #services {
   width: 100%;
-  padding: 0 12px;
-  background-color: #F6F6F6;
+  padding: 0 18px;
+  padding-top: 32px;
 }
 
 .service {
   width: 100%;
-  margin: 32px 0;
+  margin-bottom: 32px;
 }
 .service_plats {
   width: 100%;
@@ -344,12 +344,11 @@ form p {
 }
 
 #commander {
+  height: 120px;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 12px;
-  margin-bottom: 12px;
 }
 #commander .submit-button {
   padding: 16px 48px;
