--- a/styles/sass/pages/restaurants.scss
+++ b/styles/sass/pages/restaurants.scss
@@ -81,6 +81,14 @@
             animation-iteration-count: 1;
         }
     }
+    opacity: 0;
+
+    animation:  1s 3s apparition forwards;
+    @for $i from 1 through 5 {
+        &:nth-of-type(#{$i}n) {
+            animation-delay: #{$i * 0.3}s;
+        }
+    }
 }
 .content {
     min-width: calc(100% - $dimension-check-plat);
