--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,16 @@
     transform: rotate(360deg);
   }
 }
+@keyframes apparition {
+  from {
+    opacity: 0;
+    transform: translateY(14px);
+  }
+  to {
+    opacity: 100%;
+    transform: translateY(0);
+  }
+}
 * {
   padding: 0;
   margin: 0;
@@ -285,6 +295,8 @@ form p {
   box-shadow: 3px 3px 6px #99E2D0;
   background-color: white;
   overflow: hidden;
+  opacity: 0;
+  animation: 1s 3s apparition forwards;
 }
 .carte-de-plat:hover .content {
   min-width: calc(100% - 60px - 60px);
@@ -292,6 +304,21 @@ form p {
 .carte-de-plat:hover i {
   animation: rotation 0.3s linear;
   animation-iteration-count: 1;
+}
+.carte-de-plat:nth-of-type(1n) {
+  animation-delay: 0.3s;
+}
+.carte-de-plat:nth-of-type(2n) {
+  animation-delay: 0.6s;
+}
+.carte-de-plat:nth-of-type(3n) {
+  animation-delay: 0.9s;
+}
+.carte-de-plat:nth-of-type(4n) {
+  animation-delay: 1.2s;
+}
+.carte-de-plat:nth-of-type(5n) {
+  animation-delay: 1.5s;
 }
 
 .content {
