--- a/styles/sass/pages/accueil.scss
+++ b/styles/sass/pages/accueil.scss
@@ -1,16 +1,16 @@
 // Formulaire de recherche 
 form {
-    background-color: $background-grey-lighter;
+    background-color: $background-white-grey;
     text-align: center;
     padding-bottom: 35px;
-    @include display-flex-column-center;
+    @include display-flex-column-align-center;
     input {
         height: 50px;
         width: 100%;
         margin-bottom: 35px;
 
         background-color: #EAEAEA;
-        box-shadow: inset 0 3px 3px $tertiaire-grey;
+        box-shadow: inset 0 3px 3px $tertiaire;
         text-align: center;
         font-weight: 700;
         font-family: Arial, 'Font Awesome 5 Free';
@@ -26,7 +26,7 @@ form {
         padding-bottom: 21px;
         font-weight: 400;
         font-size: 18px;
-        color: $quaternaire-grey-darker;
+        color: $darker-grey;
     }
 }
 
@@ -45,9 +45,8 @@ form {
     height: 74px;
     width: 100%;
     @include display-flex-center-center;
-    border-radius: 16px;
-    box-shadow: 3px 3px 18px $tertiaire-grey;
-    background-color: $background-grey-lighter;
+    @include card-bordur-radius-box-shadow;
+    background-color: $background-white-grey;
     margin-bottom: 24px;
     &:hover {
         background-color: #F5EEFC;
@@ -61,13 +60,13 @@ form {
         padding: 2px 7px;
         border-radius: 21px;
         background-color: $primaire-blue;
-        color: $text-white;
+        color: $white-grey;
     }
     i {
         position: absolute;
         left: 28px;
         font-size: 16px;
-        color: $quaternaire-grey-darker;
+        color: $darker-grey;
     }
     .steps_definition {
         font-weight: 700;
@@ -78,7 +77,7 @@ form {
 #restaurants {
     width: 100%;
     padding: 48px 24px;
-    background-color: $background-grey-lighter;
+    background-color: $background-white-grey;
     h2 {
         margin-bottom: 21px;
         font-size: 21px;
@@ -90,44 +89,38 @@ form {
     height: 250px;
     width: 100%;
     display: block;
-    border-radius: 16px;
+    @include card-bordur-radius-box-shadow;
     background-color: white;
-    box-shadow: 3px 3px 18px $tertiaire-grey;
     margin-bottom: 21px;
     overflow: hidden;
-    &_img {
-        position: relative;
-        height: 175px;
-        width: 100%;
-
-        display: flex;
-        align-items: flex-end;
-        justify-content: center;
-
-        overflow: hidden;
-        img {
-            width: 105%;
-        }
-    }
-    &_description {
-        height: 75px;
-        width: 100%;
-        padding: 16px;
-        display: flex;
-        justify-content: space-between;
-        &_name {
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            h3 {
-                font-size: 18px;
-                line-height: 29px;
-                font-weight: 700;
-            }
-        }
+}
+.restaurants_card_img {
+    position: relative;
+    height: 175px;
+    width: 100%;
+    @include display-flex-content-center;
+    align-items: flex-end;
+    overflow: hidden;
+    img {
+        width: 105%;
     }
 }
 .restaurants_card:nth-of-type(2) .restaurants_card_img {
     align-items: center;
+}
+.restaurants_card_description {
+    height: 75px;
+    width: 100%;
+    padding: 16px;
+    display: flex;
+    justify-content: space-between;
+}
+.restaurants_card_description_name {
+    height: 100%;
+    @include display-flex-column-content-center;
+    h3 {
+        font-size: 18px;
+        line-height: 29px;
+        font-weight: 700;
+    }
 }
