--- a/styles/sass/base/base_styles.scss
+++ b/styles/sass/base/base_styles.scss
@@ -9,7 +9,7 @@
 
     color: black;
     font-size: 16px;
-    font-family: "roboto";
+    font-family: "roboto", Arial, sans-serif;
     font-weight: 400;
     background: none;
     border: none;
